fix spacing for old site link on mobile

--- a/apps/site/web/static/css/_header.scss
+++ b/apps/site/web/static/css/_header.scss
@@ -281,7 +281,7 @@ header {
     margin-bottom: -$space-16 * 2;
     margin-left: -$grid-gutter-width / 2;
     margin-right: -$grid-gutter-width / 2;
-    padding-top: 1.2rem;
+    padding-top: $space-12;
   }
 }
 
